# lmbox

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  TODO  asoundrc  bootstrap.sh  configure.ac  lircd.conf  lircrc  lmbox.dtd  lmbox.tcl  lmbox.xml  lmboxrc
data/.svn/: entries
data/Contacts/.svn/: entries
data/Contacts/.svn/text-base/: contacts.txt.svn-base
data/Games/.svn/: entries
data/Games/.svn/text-base/: keepyups.gif.svn-base  keepyups.swf.svn-base
data/Images/.svn/: entries
data/Images/.svn/text-base/: tv.jpg.svn-base
data/Movies/: movies.txt
data/Movies/.svn/: entries
data/Movies/.svn/text-base/: 1.jpg.svn-base  1261.jpg.svn-base  1272.jpg.svn-base  1287.jpg.svn-base  1292.jpg.svn-base  194.jpg.svn-base  199.jpg.svn-base  214.jpg.svn-base  267.jpg.svn-base  273.jpg.svn-base  286.jpg.svn-base  293.jpg.svn-base  294.jpg.svn-base  298.jpg.svn-base  KillerBeanTest.mpg.svn-base  OverTheHedge.avi.svn-base
data/Music/.svn/: entries
data/Music/Vitaliy Fursov/.svn/: entries
data/Videos/.svn/: entries
data/Videos/.svn/text-base/: Kick.mpg.svn-base  Kick.png.svn-base  NeverTrustAWoman.mpg.svn-base  NeverTrustAWoman.png.svn-base  Pizza.mpg.svn-base  Pizza.png.svn-base
data/Weather/: weather.txt
data/Weather/.svn/: entries
data/iTV/: 217.htm  233.htm  250.htm  251.htm  252.htm  253.htm  38.htm  favorites.txt  refresh.sh
data/iTV/.svn/: entries
data/iTV/.svn/text-base/: 174.htm.svn-base  215.htm.svn-base  245.htm.svn-base  246.htm.svn-base  248.htm.svn-base  81.htm.svn-base  Channel5.jpg.svn-base  (+21 more)
fonts/.svn/: entries
fonts/.svn/text-base/: efrom.ttf.svn-base
images/.svn/: entries
images/.svn/text-base/: button_d.png.svn-base  button_fp.png.svn-base  calendar_f.png.svn-base  calendar_t.png.svn-base  checkbox_fc.png.svn-base  checkbox_fn.png.svn-base  checkbox_uc.png.svn-base  itemblue.png.svn-base  itemgreen180x28.png.svn-base  itemgreen300x32.png.svn-base  itemgreen400x32.png.svn-base  scrollbarh.png.svn-base  scrollbarleft.png.svn-base  scrollbarup.png.svn-base
images/icq/.svn/: entries
images/menu/.svn/: entries
images/weather/.svn/: entries
linux/.svn/: entries
linux/etc/: hosts  inittab  issue  rc.sysinit  rc.xinit  resolv.conf  syslog.conf
linux/etc/.svn/: entries
linux/etc/X11/: Xmodmap  Xresources  xorg.conf
linux/root/: .aliases  .profile
linux/root/.svn/: entries
linux/server/.svn/: entries
linux/server/etc/: exports  rsyncd.conf
linux/src/.svn/: entries
linux/src/codecs/: PKGBUILD
linux/src/shutdown/: shutdown.tcl
linux/src/tclvlc/: Makefile  tclvlc.tcl
linux/src/vlc/: PKGBUILD
linux/src/xine-lib/: PKGBUILD
m4/: dns.m4  pkg.m4
m4/.svn/: entries
m4/.svn/text-base/: lirc.m4.svn-base  mozilla.m4.svn-base  tcl.m4.svn-base  vlc.m4.svn-base  xine.m4.svn-base
modules/: calendar.tcl  calendar.xml  camera.tcl  camera.xml  config.tcl  contact.xml  favorites.tcl  http.tcl  icqlib.tcl  im.xml  init.tcl  itv.tcl  itv.xml  live365.tcl  music.tcl  music.xml  news.xml  photo.tcl  player.xml  shoutcast.tcl  sound.tcl  stock.xml  tvguide.xml  tvrossiya.tcl  weather.tcl  web.xml
modules/.svn/: entries
modules/.svn/text-base/: config.xml.svn-base  contact.tcl.svn-base  disk.tcl.svn-base  dvdrip.tcl.svn-base  dvdrip.xml.svn-base  favorites.xml.svn-base  fmtuner.tcl.svn-base  fmtuner.xml.svn-base  games.tcl.svn-base  games.xml.svn-base  idle.tcl.svn-base  im.tcl.svn-base  live365.xml.svn-base  menu.tcl.svn-base  movie.tcl.svn-base  movie.xml.svn-base  news.tcl.svn-base  phone.tcl.svn-base  photo.xml.svn-base  player.tcl.svn-base  shoutcast.xml.svn-base  stock.tcl.svn-base  templates.xml.svn-base  tvguide.tcl.svn-base  weather.xml.svn-base  web.tcl.svn-base  yahoomusic.tcl.svn-base
modules/.svn/tmp/: tempfile.tmp
sounds/.svn/: entries
sounds/.svn/text-base/: shutter.wav.svn-base
src/: Makefile.in  button.cpp  clocklabel.cpp  gfx.cpp  label.cpp  lmbox.h  main.cpp  object.cpp  page.cpp  player.cpp  radio.cpp  skinparser.cpp  sound.cpp  textfield.cpp  timer.cpp  togglebutton.cpp  tv.cpp  util.cpp  webbrowser.cpp  xmlparser.cpp
src/.svn/: entries
src/.svn/text-base/: container.cpp.svn-base  filebrowser.cpp.svn-base  font.cpp.svn-base  layout.cpp.svn-base  listbox.cpp.svn-base  picture.cpp.svn-base  screen.cpp.svn-base  scrollbar.cpp.svn-base  sock.cpp.svn-base  surface.cpp.svn-base  system.cpp.svn-base  tcl.cpp.svn-base  vlcplayer.cpp.svn-base  webbrowser.cpp.svn-base  widget.cpp.svn-base  xineplayer.cpp.svn-base
(+56 files in other folders)
